// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChoicesWithMultipleAnswers question with input sequence ["Coyote", "Coyote", "Wolf", "Wolf", "Coyote"] (randomize order true except for ["idk", "other"]) 1`] = `"[\\"Lynx\\",\\"Coyote\\",\\"Wolf\\",\\"Panda\\",\\"Fox\\",\\"Other\\",\\"I don't know\\"]"`;

exports[`ChoicesWithMultipleAnswers question with input sequence ["Coyote", "Coyote", "Wolf", "Wolf", "Coyote"] (randomize order true except for ["idk", "other"]) 2`] = `
Object {
  "coyote": true,
  "fox": false,
  "idk": false,
  "lynx": false,
  "other": false,
  "panda": false,
  "wolf": false,
}
`;

exports[`ChoicesWithMultipleAnswers question with input sequence ["Coyote", "Lynx", "Wolf", "Fox", "Coyote", "I don't know"] (randomize order true except for ["wolf", "fox", "other", "idk"]) 1`] = `"[\\"Lynx\\",\\"Panda\\",\\"Coyote\\",\\"Wolf\\",\\"Fox\\",\\"Other\\",\\"I don't know\\"]"`;

exports[`ChoicesWithMultipleAnswers question with input sequence ["Coyote", "Lynx", "Wolf", "Fox", "Coyote", "I don't know"] (randomize order true except for ["wolf", "fox", "other", "idk"]) 2`] = `
Object {
  "coyote": false,
  "fox": true,
  "idk": true,
  "lynx": true,
  "other": false,
  "panda": false,
  "wolf": true,
}
`;

exports[`ChoicesWithMultipleAnswers question with input sequence ["Coyote", "Wolf", "Fox", "Lynx", "Panda", "Other", "Coyote", "Wolf", "Fox", "Lynx", "Panda", "Other", "I don't know"] (randomize order true except for undefined) 1`] = `"[\\"Lynx\\",\\"I don't know\\",\\"Wolf\\",\\"Panda\\",\\"Other\\",\\"Fox\\",\\"Coyote\\"]"`;

exports[`ChoicesWithMultipleAnswers question with input sequence ["Coyote", "Wolf", "Fox", "Lynx", "Panda", "Other", "Coyote", "Wolf", "Fox", "Lynx", "Panda", "Other", "I don't know"] (randomize order true except for undefined) 2`] = `
Object {
  "coyote": false,
  "fox": false,
  "idk": true,
  "lynx": false,
  "other": false,
  "panda": false,
  "wolf": false,
}
`;

exports[`ChoicesWithMultipleAnswers question with input sequence ["Fox"] (randomize order true except for ["other", "idk"]) 1`] = `"[\\"Lynx\\",\\"Coyote\\",\\"Wolf\\",\\"Panda\\",\\"Fox\\",\\"Other\\",\\"I don't know\\"]"`;

exports[`ChoicesWithMultipleAnswers question with input sequence ["Fox"] (randomize order true except for ["other", "idk"]) 2`] = `
Object {
  "coyote": false,
  "fox": true,
  "idk": false,
  "lynx": false,
  "other": false,
  "panda": false,
  "wolf": false,
}
`;

exports[`ChoicesWithMultipleAnswers question with input sequence ["Lynx", "Panda", "Other"] (randomize order true except for ["other"]) 1`] = `"[\\"Lynx\\",\\"Coyote\\",\\"Wolf\\",\\"Panda\\",\\"I don't know\\",\\"Fox\\",\\"Other\\"]"`;

exports[`ChoicesWithMultipleAnswers question with input sequence ["Lynx", "Panda", "Other"] (randomize order true except for ["other"]) 2`] = `
Object {
  "coyote": false,
  "fox": false,
  "idk": false,
  "lynx": true,
  "other": true,
  "panda": true,
  "wolf": false,
}
`;

exports[`ChoicesWithMultipleAnswers question with input sequence ["Wolf", "Coyote"] (randomize order false except for undefined) 1`] = `"[\\"Wolf\\",\\"Fox\\",\\"Coyote\\",\\"Lynx\\",\\"Panda\\",\\"Other\\",\\"I don't know\\"]"`;

exports[`ChoicesWithMultipleAnswers question with input sequence ["Wolf", "Coyote"] (randomize order false except for undefined) 2`] = `
Object {
  "coyote": true,
  "fox": false,
  "idk": false,
  "lynx": false,
  "other": false,
  "panda": false,
  "wolf": true,
}
`;

exports[`ChoicesWithMultipleAnswers question with input sequence [] (randomize order false except for undefined) 1`] = `"[\\"Wolf\\",\\"Fox\\",\\"Coyote\\",\\"Lynx\\",\\"Panda\\",\\"Other\\",\\"I don't know\\"]"`;

exports[`ChoicesWithMultipleAnswers question with input sequence [] (randomize order false except for undefined) 2`] = `
Object {
  "coyote": false,
  "fox": false,
  "idk": false,
  "lynx": false,
  "other": false,
  "panda": false,
  "wolf": false,
}
`;

exports[`ChoicesWithSingleAnswer question with input sequence ["Coyote", "Coyote", "Wolf", "Wolf", "Coyote"] (randomize order true except for ["idk", "other"]) 1`] = `"[\\"Lynx\\",\\"Coyote\\",\\"Wolf\\",\\"Panda\\",\\"Fox\\",\\"Other\\",\\"I don't know\\"]"`;

exports[`ChoicesWithSingleAnswer question with input sequence ["Coyote", "Coyote", "Wolf", "Wolf", "Coyote"] (randomize order true except for ["idk", "other"]) 2`] = `"coyote"`;

exports[`ChoicesWithSingleAnswer question with input sequence ["Coyote", "Lynx", "Wolf", "Fox", "Coyote", "I don't know"] (randomize order true except for ["wolf", "fox", "other", "idk"]) 1`] = `"[\\"Lynx\\",\\"Panda\\",\\"Coyote\\",\\"Wolf\\",\\"Fox\\",\\"Other\\",\\"I don't know\\"]"`;

exports[`ChoicesWithSingleAnswer question with input sequence ["Coyote", "Lynx", "Wolf", "Fox", "Coyote", "I don't know"] (randomize order true except for ["wolf", "fox", "other", "idk"]) 2`] = `"idk"`;

exports[`ChoicesWithSingleAnswer question with input sequence ["Coyote", "Wolf", "Fox", "Lynx", "Panda", "Other", "Coyote", "Wolf", "Fox", "Lynx", "Panda", "Other", "I don't know"] (randomize order true except for undefined) 1`] = `"[\\"Lynx\\",\\"I don't know\\",\\"Wolf\\",\\"Panda\\",\\"Other\\",\\"Fox\\",\\"Coyote\\"]"`;

exports[`ChoicesWithSingleAnswer question with input sequence ["Coyote", "Wolf", "Fox", "Lynx", "Panda", "Other", "Coyote", "Wolf", "Fox", "Lynx", "Panda", "Other", "I don't know"] (randomize order true except for undefined) 2`] = `"idk"`;

exports[`ChoicesWithSingleAnswer question with input sequence ["Fox"] (randomize order true except for ["other", "idk"]) 1`] = `"[\\"Lynx\\",\\"Coyote\\",\\"Wolf\\",\\"Panda\\",\\"Fox\\",\\"Other\\",\\"I don't know\\"]"`;

exports[`ChoicesWithSingleAnswer question with input sequence ["Fox"] (randomize order true except for ["other", "idk"]) 2`] = `"fox"`;

exports[`ChoicesWithSingleAnswer question with input sequence ["Lynx", "Panda", "Other"] (randomize order true except for ["other"]) 1`] = `"[\\"Lynx\\",\\"Coyote\\",\\"Wolf\\",\\"Panda\\",\\"I don't know\\",\\"Fox\\",\\"Other\\"]"`;

exports[`ChoicesWithSingleAnswer question with input sequence ["Lynx", "Panda", "Other"] (randomize order true except for ["other"]) 2`] = `"other"`;

exports[`ChoicesWithSingleAnswer question with input sequence ["Wolf", "Coyote"] (randomize order false except for undefined) 1`] = `"[\\"Wolf\\",\\"Fox\\",\\"Coyote\\",\\"Lynx\\",\\"Panda\\",\\"Other\\",\\"I don't know\\"]"`;

exports[`ChoicesWithSingleAnswer question with input sequence ["Wolf", "Coyote"] (randomize order false except for undefined) 2`] = `"coyote"`;

exports[`ChoicesWithSingleAnswer question with input sequence [] (randomize order false except for undefined) 1`] = `"[\\"Wolf\\",\\"Fox\\",\\"Coyote\\",\\"Lynx\\",\\"Panda\\",\\"Other\\",\\"I don't know\\"]"`;
